// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ThesisSubmission should display successfull submission screen 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container StandardPage css-11lq3yg-MuiGrid-root"
    data-testid="rhd-submission-succeeded"
    id="rhd-submission-succeeded"
  >
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true css-1vd824g-MuiGrid-root"
    >
      <h2
        class="MuiTypography-root MuiTypography-body1 css-v2c8i0-MuiTypography-root"
        data-analyticsid="page-title"
        data-testid="page-title"
        id="page-title"
      >
        Professional doctorate deposit
      </h2>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
    />
    <div
      class="MuiGrid-root MuiGrid-item css-1guqyqn-MuiGrid-root"
    >
      <div
        class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-3 css-dkd71f-MuiGrid2-root"
      >
        <div
          class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 css-16fnxy3-MuiGrid2-root"
        >
          <div
            class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-985319-MuiPaper-root-MuiCard-root"
            data-testid="standard-card-your-thesis-has-been-deposited"
            id="standard-card-your-thesis-has-been-deposited"
          >
            <div
              class="MuiCardHeader-root css-16c6n48-MuiCardHeader-root"
            >
              <div
                class="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
              >
                <h3
                  class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title css-1hzv55z-MuiTypography-root"
                  data-testid="standard-card-your-thesis-has-been-deposited-header"
                  id="standard-card-your-thesis-has-been-deposited-header"
                >
                  Your thesis has been deposited
                </h3>
              </div>
            </div>
            <div
              class="MuiCardContent-root css-46bh2p-MuiCardContent-root"
              data-analyticsid="standard-card-your-thesis-has-been-deposited-content"
              data-testid="standard-card-your-thesis-has-been-deposited-content"
              id="standard-card-your-thesis-has-been-deposited-content"
            >
              <div
                class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-3 css-dkd71f-MuiGrid2-root"
              >
                <div
                  class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 css-16fnxy3-MuiGrid2-root"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-u1nwny-MuiTypography-root"
                  >
                    You will receive an email confirming your thesis deposit shortly.
                  </p>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-2 css-x3vexg-MuiGrid2-root"
      >
        <div
          class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-true css-1gtgtdn-MuiGrid2-root"
        />
        <div
          class="MuiGrid2-root MuiGrid2-direction-xs-row css-27y2fm-MuiGrid2-root"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-fullWidth MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-fullWidth css-1duotrm-MuiButtonBase-root-MuiButton-root"
            tabindex="0"
            type="button"
          >
            Return to the Graduate School website
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ThesisSubmission should have a helper to generate alert props 1`] = `
{
  "message": "Error has occurred during request and request cannot be processed. Check your internet connection and TRY AGAIN or contact UQ Graduate School administrators.",
  "title": "Error",
  "type": "error_outline",
}
`;

exports[`ThesisSubmission should render component with buttons disabled on submitting 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container StandardPage css-11lq3yg-MuiGrid-root"
    data-testid="rhd-submission"
    id="rhd-submission"
  >
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true css-1vd824g-MuiGrid-root"
    >
      <h2
        class="MuiTypography-root MuiTypography-body1 css-v2c8i0-MuiTypography-root"
        data-analyticsid="page-title"
        data-testid="page-title"
        id="page-title"
      >
        Higher degree by research thesis deposit
      </h2>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
    />
    <div
      class="MuiGrid-root MuiGrid-item css-1guqyqn-MuiGrid-root"
    >
      <form>
        <span />
        <span
          class="MuiBox-root css-0"
          data-testid="confirmDialogBox"
        />
        <div
          class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-3 css-dkd71f-MuiGrid2-root"
        >
          <div
            class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 css-16fnxy3-MuiGrid2-root"
          >
            <div
              class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-985319-MuiPaper-root-MuiCard-root"
              data-testid="standard-card-thesis-information"
              id="standard-card-thesis-information"
            >
              <div
                class="MuiCardHeader-root css-16c6n48-MuiCardHeader-root"
              >
                <div
                  class="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
                >
                  <h3
                    class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title css-1hzv55z-MuiTypography-root"
                    data-testid="standard-card-thesis-information-header"
                    id="standard-card-thesis-information-header"
                  >
                    Thesis information
                  </h3>
                </div>
              </div>
              <div
                class="MuiCardContent-root css-46bh2p-MuiCardContent-root"
                data-analyticsid="standard-card-thesis-information-content"
                data-testid="standard-card-thesis-information-content"
                id="standard-card-thesis-information-content"
              >
                <div
                  class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-3 css-dkd71f-MuiGrid2-root"
                >
                  <div
                    class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 css-16fnxy3-MuiGrid2-root"
                  >
                    <field
                      is="mock"
                      name="thesisTitle"
                      required="true"
                      title="Thesis title"
                    />
                  </div>
                  <div
                    class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-sm-6 css-y6fwcd-MuiGrid2-root"
                  >
                    <field
                      is="mock"
                      label="Author name"
                      name="currentAuthor.0.nameAsPublished"
                      required="true"
                    />
                  </div>
                  <div
                    class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-sm-6 css-y6fwcd-MuiGrid2-root"
                  >
                    <field
                      is="mock"
                      label="Thesis type"
                      name="rek_genre_type"
                      required="true"
                    />
                  </div>
                  <div
                    class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 css-16fnxy3-MuiGrid2-root"
                  >
                    <field
                      is="mock"
                      label="Enrolling unit"
                      name="fez_record_search_key_org_unit_name.rek_org_unit_name"
                      required="true"
                    />
                  </div>
                  <div
                    class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 css-16fnxy3-MuiGrid2-root"
                  >
                    <field
                      is="mock"
                      name="thesisAbstract"
                      required="true"
                      title="Abstract"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 css-16fnxy3-MuiGrid2-root"
          >
            <div
              class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-985319-MuiPaper-root-MuiCard-root"
              data-testid="standard-card-supervisors"
              id="standard-card-supervisors"
            >
              <div
                class="MuiCardHeader-root css-16c6n48-MuiCardHeader-root"
              >
                <div
                  class="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
                >
                  <h3
                    class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title css-1hzv55z-MuiTypography-root"
                    data-testid="standard-card-supervisors-header"
                    id="standard-card-supervisors-header"
                  >
                    Supervisors
                  </h3>
                </div>
              </div>
              <div
                class="MuiCardContent-root css-46bh2p-MuiCardContent-root"
                data-analyticsid="standard-card-supervisors-content"
                data-testid="standard-card-supervisors-content"
                id="standard-card-supervisors-content"
              >
                <field
                  is="mock"
                  name="supervisors"
                  required="true"
                />
              </div>
            </div>
          </div>
          <div
            class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 css-16fnxy3-MuiGrid2-root"
          >
            <div
              class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-985319-MuiPaper-root-MuiCard-root"
              data-testid="standard-card-field-of-research"
              id="standard-card-field-of-research"
            >
              <div
                class="MuiCardHeader-root css-16c6n48-MuiCardHeader-root"
              >
                <div
                  class="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
                >
                  <h3
                    class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title css-1hzv55z-MuiTypography-root"
                    data-testid="standard-card-field-of-research-header"
                    id="standard-card-field-of-research-header"
                  >
                    Field of research
                  </h3>
                </div>
              </div>
              <div
                class="MuiCardContent-root css-46bh2p-MuiCardContent-root"
                data-analyticsid="standard-card-field-of-research-content"
                data-testid="standard-card-field-of-research-content"
                id="standard-card-field-of-research-content"
              >
                <p
                  class="MuiTypography-root MuiTypography-body1 css-u1nwny-MuiTypography-root"
                >
                  Select up to 3 Field of Research (FoR) codes at the 4 digit level
                </p>
                <field
                  is="mock"
                  name="fieldOfResearch"
                  required="true"
                />
              </div>
            </div>
          </div>
          <div
            class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 css-16fnxy3-MuiGrid2-root"
          >
            <div
              class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-985319-MuiPaper-root-MuiCard-root"
              data-testid="standard-card-keywords"
              id="standard-card-keywords"
            >
              <div
                class="MuiCardHeader-root css-16c6n48-MuiCardHeader-root"
              >
                <div
                  class="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
                >
                  <h3
                    class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title css-1hzv55z-MuiTypography-root"
                    data-testid="standard-card-keywords-header"
                    id="standard-card-keywords-header"
                  >
                    Keywords
                  </h3>
                </div>
              </div>
              <div
                class="MuiCardContent-root css-46bh2p-MuiCardContent-root"
                data-analyticsid="standard-card-keywords-content"
                data-testid="standard-card-keywords-content"
                id="standard-card-keywords-content"
              >
                <p
                  class="MuiTypography-root MuiTypography-body1 css-u1nwny-MuiTypography-root"
                >
                  Add up to 10 individual keywords, or a pipe separated list, that describe the content of the thesis. (eg. one|two|three)
                </p>
                <field
                  is="mock"
                  name="fez_record_search_key_keywords"
                  required="true"
                />
              </div>
            </div>
          </div>
          <div
            class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 css-16fnxy3-MuiGrid2-root"
          >
            <div
              class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-985319-MuiPaper-root-MuiCard-root"
              data-testid="standard-card-upload-files"
              id="standard-card-upload-files"
            >
              <div
                class="MuiCardHeader-root css-16c6n48-MuiCardHeader-root"
              >
                <div
                  class="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
                >
                  <h3
                    class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title css-1hzv55z-MuiTypography-root"
                    data-testid="standard-card-upload-files-header"
                    id="standard-card-upload-files-header"
                  >
                    Upload files
                  </h3>
                </div>
              </div>
              <div
                class="MuiCardContent-root css-46bh2p-MuiCardContent-root"
                data-analyticsid="standard-card-upload-files-content"
                data-testid="standard-card-upload-files-content"
                id="standard-card-upload-files-content"
              >
                <field
                  is="mock"
                  name="files"
                />
              </div>
            </div>
          </div>
          <div
            class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 css-16fnxy3-MuiGrid2-root"
          >
            <div
              data-testid="alert"
              style="margin-top: 5px;"
            >
              <div
                class="MuiGrid-root MuiGrid-container css-nhty2z-MuiGrid-root"
                data-analyticsid="thesis-submission-validation"
                data-testid="thesis-submission-validation"
                id="thesis-submission-validation"
              >
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-true css-cyocdy-MuiGrid-root"
                >
                  <div
                    class="MuiGrid-root MuiGrid-container css-1k6h6af-MuiGrid-root"
                  >
                    <div
                      class="MuiGrid-root MuiGrid-item alert-icon css-sco6ic-MuiGrid-root"
                    >
                      <span
                        class="MuiCircularProgress-root MuiCircularProgress-indeterminate MuiCircularProgress-colorPrimary spinner css-u4ps4u-MuiCircularProgress-root"
                        data-testid="spinner"
                        id="spinner"
                        role="progressbar"
                        style="width: 38px; height: 38px;"
                      >
                        <svg
                          class="MuiCircularProgress-svg css-1idz92c-MuiCircularProgress-svg"
                          viewBox="22 22 44 44"
                        >
                          <circle
                            class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate css-176wh8e-MuiCircularProgress-circle"
                            cx="44"
                            cy="44"
                            fill="none"
                            r="20.5"
                            stroke-width="3"
                          />
                        </svg>
                      </span>
                    </div>
                    <div
                      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true alert-text css-1ux0ax1-MuiGrid-root"
                    >
                      <b>
                        Saving - 
                      </b>
                      Creating new work is in progress.
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-2 css-x3vexg-MuiGrid2-root"
        >
          <div
            class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-sm-true css-25dekx-MuiGrid2-root"
          />
          <div
            class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-sm-auto css-1o48fio-MuiGrid2-root"
          >
            <button
              aria-label="Cancel"
              class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-fullWidth Mui-disabled MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-fullWidth css-1duotrm-MuiButtonBase-root-MuiButton-root"
              data-testid="cancel-deposit-thesis"
              disabled=""
              tabindex="-1"
              type="button"
            >
              Cancel
            </button>
          </div>
          <div
            class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-sm-auto css-1o48fio-MuiGrid2-root"
          >
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-fullWidth Mui-disabled MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-fullWidth css-1duotrm-MuiButtonBase-root-MuiButton-root"
              data-testid="deposit-thesis"
              disabled=""
              id="submit-thesis"
              tabindex="-1"
              type="button"
            >
              Deposit your thesis
            </button>
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`ThesisSubmission should render hdr thesis submission acknowledgement 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container StandardPage css-11lq3yg-MuiGrid-root"
    data-testid="rhd-submission-succeeded"
    id="rhd-submission-succeeded"
  >
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true css-1vd824g-MuiGrid-root"
    >
      <h2
        class="MuiTypography-root MuiTypography-body1 css-v2c8i0-MuiTypography-root"
        data-analyticsid="page-title"
        data-testid="page-title"
        id="page-title"
      >
        Higher degree by research thesis deposit
      </h2>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
    />
    <div
      class="MuiGrid-root MuiGrid-item css-1guqyqn-MuiGrid-root"
    >
      <div
        class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-3 css-dkd71f-MuiGrid2-root"
      >
        <div
          class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 css-16fnxy3-MuiGrid2-root"
        >
          <div
            class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-985319-MuiPaper-root-MuiCard-root"
            data-testid="standard-card-your-thesis-has-been-deposited"
            id="standard-card-your-thesis-has-been-deposited"
          >
            <div
              class="MuiCardHeader-root css-16c6n48-MuiCardHeader-root"
            >
              <div
                class="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
              >
                <h3
                  class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title css-1hzv55z-MuiTypography-root"
                  data-testid="standard-card-your-thesis-has-been-deposited-header"
                  id="standard-card-your-thesis-has-been-deposited-header"
                >
                  Your thesis has been deposited
                </h3>
              </div>
            </div>
            <div
              class="MuiCardContent-root css-46bh2p-MuiCardContent-root"
              data-analyticsid="standard-card-your-thesis-has-been-deposited-content"
              data-testid="standard-card-your-thesis-has-been-deposited-content"
              id="standard-card-your-thesis-has-been-deposited-content"
            >
              <div
                class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-3 css-dkd71f-MuiGrid2-root"
              >
                <div
                  class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 css-16fnxy3-MuiGrid2-root"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-u1nwny-MuiTypography-root"
                  >
                    You will receive an email confirming your thesis deposit shortly.
                  </p>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-2 css-x3vexg-MuiGrid2-root"
      >
        <div
          class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-true css-1gtgtdn-MuiGrid2-root"
        />
        <div
          class="MuiGrid2-root MuiGrid2-direction-xs-row css-27y2fm-MuiGrid2-root"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-fullWidth MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-fullWidth css-1duotrm-MuiButtonBase-root-MuiButton-root"
            tabindex="0"
            type="button"
          >
            Return to the Graduate School website
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ThesisSubmission should render hdr thesis submission form 1`] = `
<div
  aria-hidden="true"
>
  <div
    class="MuiGrid-root MuiGrid-container StandardPage css-11lq3yg-MuiGrid-root"
    data-testid="rhd-submission"
    id="rhd-submission"
  >
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true css-1vd824g-MuiGrid-root"
    >
      <h2
        class="MuiTypography-root MuiTypography-body1 css-v2c8i0-MuiTypography-root"
        data-analyticsid="page-title"
        data-testid="page-title"
        id="page-title"
      >
        Higher degree by research thesis deposit
      </h2>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
    />
    <div
      class="MuiGrid-root MuiGrid-item css-1guqyqn-MuiGrid-root"
    >
      <form>
        <span />
        <span
          class="MuiBox-root css-0"
          data-testid="confirmDialogBox"
        />
        <div
          class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-3 css-dkd71f-MuiGrid2-root"
        >
          <div
            class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 css-16fnxy3-MuiGrid2-root"
          >
            <div
              class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-985319-MuiPaper-root-MuiCard-root"
              data-testid="standard-card-thesis-information"
              id="standard-card-thesis-information"
            >
              <div
                class="MuiCardHeader-root css-16c6n48-MuiCardHeader-root"
              >
                <div
                  class="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
                >
                  <h3
                    class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title css-1hzv55z-MuiTypography-root"
                    data-testid="standard-card-thesis-information-header"
                    id="standard-card-thesis-information-header"
                  >
                    Thesis information
                  </h3>
                </div>
              </div>
              <div
                class="MuiCardContent-root css-46bh2p-MuiCardContent-root"
                data-analyticsid="standard-card-thesis-information-content"
                data-testid="standard-card-thesis-information-content"
                id="standard-card-thesis-information-content"
              >
                <div
                  class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-3 css-dkd71f-MuiGrid2-root"
                >
                  <div
                    class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 css-16fnxy3-MuiGrid2-root"
                  >
                    <field
                      is="mock"
                      name="thesisTitle"
                      required="true"
                      title="Thesis title"
                    />
                  </div>
                  <div
                    class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-sm-6 css-y6fwcd-MuiGrid2-root"
                  >
                    <field
                      is="mock"
                      label="Author name"
                      name="currentAuthor.0.nameAsPublished"
                      required="true"
                    />
                  </div>
                  <div
                    class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-sm-6 css-y6fwcd-MuiGrid2-root"
                  >
                    <field
                      is="mock"
                      label="Thesis type"
                      name="rek_genre_type"
                      required="true"
                    />
                  </div>
                  <div
                    class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 css-16fnxy3-MuiGrid2-root"
                  >
                    <field
                      is="mock"
                      label="Enrolling unit"
                      name="fez_record_search_key_org_unit_name.rek_org_unit_name"
                      required="true"
                    />
                  </div>
                  <div
                    class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 css-16fnxy3-MuiGrid2-root"
                  >
                    <field
                      is="mock"
                      name="thesisAbstract"
                      required="true"
                      title="Abstract"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 css-16fnxy3-MuiGrid2-root"
          >
            <div
              class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-985319-MuiPaper-root-MuiCard-root"
              data-testid="standard-card-supervisors"
              id="standard-card-supervisors"
            >
              <div
                class="MuiCardHeader-root css-16c6n48-MuiCardHeader-root"
              >
                <div
                  class="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
                >
                  <h3
                    class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title css-1hzv55z-MuiTypography-root"
                    data-testid="standard-card-supervisors-header"
                    id="standard-card-supervisors-header"
                  >
                    Supervisors
                  </h3>
                </div>
              </div>
              <div
                class="MuiCardContent-root css-46bh2p-MuiCardContent-root"
                data-analyticsid="standard-card-supervisors-content"
                data-testid="standard-card-supervisors-content"
                id="standard-card-supervisors-content"
              >
                <field
                  is="mock"
                  name="supervisors"
                  required="true"
                />
              </div>
            </div>
          </div>
          <div
            class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 css-16fnxy3-MuiGrid2-root"
          >
            <div
              class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-985319-MuiPaper-root-MuiCard-root"
              data-testid="standard-card-field-of-research"
              id="standard-card-field-of-research"
            >
              <div
                class="MuiCardHeader-root css-16c6n48-MuiCardHeader-root"
              >
                <div
                  class="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
                >
                  <h3
                    class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title css-1hzv55z-MuiTypography-root"
                    data-testid="standard-card-field-of-research-header"
                    id="standard-card-field-of-research-header"
                  >
                    Field of research
                  </h3>
                </div>
              </div>
              <div
                class="MuiCardContent-root css-46bh2p-MuiCardContent-root"
                data-analyticsid="standard-card-field-of-research-content"
                data-testid="standard-card-field-of-research-content"
                id="standard-card-field-of-research-content"
              >
                <p
                  class="MuiTypography-root MuiTypography-body1 css-u1nwny-MuiTypography-root"
                >
                  Select up to 3 Field of Research (FoR) codes at the 4 digit level
                </p>
                <field
                  is="mock"
                  name="fieldOfResearch"
                  required="true"
                />
              </div>
            </div>
          </div>
          <div
            class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 css-16fnxy3-MuiGrid2-root"
          >
            <div
              class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-985319-MuiPaper-root-MuiCard-root"
              data-testid="standard-card-keywords"
              id="standard-card-keywords"
            >
              <div
                class="MuiCardHeader-root css-16c6n48-MuiCardHeader-root"
              >
                <div
                  class="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
                >
                  <h3
                    class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title css-1hzv55z-MuiTypography-root"
                    data-testid="standard-card-keywords-header"
                    id="standard-card-keywords-header"
                  >
                    Keywords
                  </h3>
                </div>
              </div>
              <div
                class="MuiCardContent-root css-46bh2p-MuiCardContent-root"
                data-analyticsid="standard-card-keywords-content"
                data-testid="standard-card-keywords-content"
                id="standard-card-keywords-content"
              >
                <p
                  class="MuiTypography-root MuiTypography-body1 css-u1nwny-MuiTypography-root"
                >
                  Add up to 10 individual keywords, or a pipe separated list, that describe the content of the thesis. (eg. one|two|three)
                </p>
                <field
                  is="mock"
                  name="fez_record_search_key_keywords"
                  required="true"
                />
              </div>
            </div>
          </div>
          <div
            class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 css-16fnxy3-MuiGrid2-root"
          >
            <div
              class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-985319-MuiPaper-root-MuiCard-root"
              data-testid="standard-card-upload-files"
              id="standard-card-upload-files"
            >
              <div
                class="MuiCardHeader-root css-16c6n48-MuiCardHeader-root"
              >
                <div
                  class="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
                >
                  <h3
                    class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title css-1hzv55z-MuiTypography-root"
                    data-testid="standard-card-upload-files-header"
                    id="standard-card-upload-files-header"
                  >
                    Upload files
                  </h3>
                </div>
              </div>
              <div
                class="MuiCardContent-root css-46bh2p-MuiCardContent-root"
                data-analyticsid="standard-card-upload-files-content"
                data-testid="standard-card-upload-files-content"
                id="standard-card-upload-files-content"
              >
                <field
                  is="mock"
                  name="files"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-2 css-x3vexg-MuiGrid2-root"
        >
          <div
            class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-sm-true css-25dekx-MuiGrid2-root"
          />
          <div
            class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-sm-auto css-1o48fio-MuiGrid2-root"
          >
            <button
              aria-label="Cancel"
              class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-fullWidth MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-fullWidth css-1duotrm-MuiButtonBase-root-MuiButton-root"
              data-testid="cancel-deposit-thesis"
              tabindex="0"
              type="button"
            >
              Cancel
            </button>
          </div>
          <div
            class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-sm-auto css-1o48fio-MuiGrid2-root"
          >
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-fullWidth MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-fullWidth css-1duotrm-MuiButtonBase-root-MuiButton-root"
              data-testid="deposit-thesis"
              id="submit-thesis"
              tabindex="0"
              type="button"
            >
              Deposit your thesis
            </button>
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`ThesisSubmission should render sbs thesis submission acknowledgement 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container StandardPage css-11lq3yg-MuiGrid-root"
    data-testid="rhd-submission-succeeded"
    id="rhd-submission-succeeded"
  >
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true css-1vd824g-MuiGrid-root"
    >
      <h2
        class="MuiTypography-root MuiTypography-body1 css-v2c8i0-MuiTypography-root"
        data-analyticsid="page-title"
        data-testid="page-title"
        id="page-title"
      >
        Professional doctorate deposit
      </h2>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
    />
    <div
      class="MuiGrid-root MuiGrid-item css-1guqyqn-MuiGrid-root"
    >
      <div
        class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-3 css-dkd71f-MuiGrid2-root"
      >
        <div
          class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 css-16fnxy3-MuiGrid2-root"
        >
          <div
            class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-985319-MuiPaper-root-MuiCard-root"
            data-testid="standard-card-your-thesis-has-been-deposited"
            id="standard-card-your-thesis-has-been-deposited"
          >
            <div
              class="MuiCardHeader-root css-16c6n48-MuiCardHeader-root"
            >
              <div
                class="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
              >
                <h3
                  class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title css-1hzv55z-MuiTypography-root"
                  data-testid="standard-card-your-thesis-has-been-deposited-header"
                  id="standard-card-your-thesis-has-been-deposited-header"
                >
                  Your thesis has been deposited
                </h3>
              </div>
            </div>
            <div
              class="MuiCardContent-root css-46bh2p-MuiCardContent-root"
              data-analyticsid="standard-card-your-thesis-has-been-deposited-content"
              data-testid="standard-card-your-thesis-has-been-deposited-content"
              id="standard-card-your-thesis-has-been-deposited-content"
            >
              <div
                class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-3 css-dkd71f-MuiGrid2-root"
              >
                <div
                  class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 css-16fnxy3-MuiGrid2-root"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-u1nwny-MuiTypography-root"
                  >
                    You will receive an email confirming your thesis deposit shortly.
                  </p>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-2 css-x3vexg-MuiGrid2-root"
      >
        <div
          class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-true css-1gtgtdn-MuiGrid2-root"
        />
        <div
          class="MuiGrid2-root MuiGrid2-direction-xs-row css-27y2fm-MuiGrid2-root"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-fullWidth MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-fullWidth css-1duotrm-MuiButtonBase-root-MuiButton-root"
            tabindex="0"
            type="button"
          >
            Return to the Graduate School website
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ThesisSubmission should render sbs thesis submission form 1`] = `
<div
  aria-hidden="true"
>
  <div
    class="MuiGrid-root MuiGrid-container StandardPage css-11lq3yg-MuiGrid-root"
    data-testid="rhd-submission"
    id="rhd-submission"
  >
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true css-1vd824g-MuiGrid-root"
    >
      <h2
        class="MuiTypography-root MuiTypography-body1 css-v2c8i0-MuiTypography-root"
        data-analyticsid="page-title"
        data-testid="page-title"
        id="page-title"
      >
        Professional doctorate deposit
      </h2>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
    />
    <div
      class="MuiGrid-root MuiGrid-item css-1guqyqn-MuiGrid-root"
    >
      <form>
        <span />
        <span
          class="MuiBox-root css-0"
          data-testid="confirmDialogBox"
        />
        <div
          class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-3 css-dkd71f-MuiGrid2-root"
        >
          <div
            class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 css-16fnxy3-MuiGrid2-root"
          >
            <div
              class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-985319-MuiPaper-root-MuiCard-root"
              data-testid="standard-card-thesis-information"
              id="standard-card-thesis-information"
            >
              <div
                class="MuiCardHeader-root css-16c6n48-MuiCardHeader-root"
              >
                <div
                  class="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
                >
                  <h3
                    class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title css-1hzv55z-MuiTypography-root"
                    data-testid="standard-card-thesis-information-header"
                    id="standard-card-thesis-information-header"
                  >
                    Thesis information
                  </h3>
                </div>
              </div>
              <div
                class="MuiCardContent-root css-46bh2p-MuiCardContent-root"
                data-analyticsid="standard-card-thesis-information-content"
                data-testid="standard-card-thesis-information-content"
                id="standard-card-thesis-information-content"
              >
                <div
                  class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-3 css-dkd71f-MuiGrid2-root"
                >
                  <div
                    class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 css-16fnxy3-MuiGrid2-root"
                  >
                    <field
                      is="mock"
                      name="thesisTitle"
                      required="true"
                      title="Thesis title"
                    />
                  </div>
                  <div
                    class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-sm-6 css-y6fwcd-MuiGrid2-root"
                  >
                    <field
                      is="mock"
                      label="Author name"
                      name="currentAuthor.0.nameAsPublished"
                      required="true"
                    />
                  </div>
                  <div
                    class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-sm-6 css-y6fwcd-MuiGrid2-root"
                  >
                    <field
                      is="mock"
                      label="Thesis type"
                      name="rek_genre_type"
                      required="true"
                    />
                  </div>
                  <div
                    class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 css-16fnxy3-MuiGrid2-root"
                  >
                    <field
                      is="mock"
                      label="Enrolling unit"
                      name="fez_record_search_key_org_unit_name.rek_org_unit_name"
                      required="true"
                    />
                  </div>
                  <div
                    class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 css-16fnxy3-MuiGrid2-root"
                  >
                    <field
                      is="mock"
                      name="thesisAbstract"
                      required="true"
                      title="Abstract"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 css-16fnxy3-MuiGrid2-root"
          >
            <div
              class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-985319-MuiPaper-root-MuiCard-root"
              data-testid="standard-card-supervisors"
              id="standard-card-supervisors"
            >
              <div
                class="MuiCardHeader-root css-16c6n48-MuiCardHeader-root"
              >
                <div
                  class="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
                >
                  <h3
                    class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title css-1hzv55z-MuiTypography-root"
                    data-testid="standard-card-supervisors-header"
                    id="standard-card-supervisors-header"
                  >
                    Supervisors
                  </h3>
                </div>
              </div>
              <div
                class="MuiCardContent-root css-46bh2p-MuiCardContent-root"
                data-analyticsid="standard-card-supervisors-content"
                data-testid="standard-card-supervisors-content"
                id="standard-card-supervisors-content"
              >
                <field
                  is="mock"
                  name="supervisors"
                  required="true"
                />
              </div>
            </div>
          </div>
          <div
            class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 css-16fnxy3-MuiGrid2-root"
          >
            <div
              class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-985319-MuiPaper-root-MuiCard-root"
              data-testid="standard-card-field-of-research"
              id="standard-card-field-of-research"
            >
              <div
                class="MuiCardHeader-root css-16c6n48-MuiCardHeader-root"
              >
                <div
                  class="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
                >
                  <h3
                    class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title css-1hzv55z-MuiTypography-root"
                    data-testid="standard-card-field-of-research-header"
                    id="standard-card-field-of-research-header"
                  >
                    Field of research
                  </h3>
                </div>
              </div>
              <div
                class="MuiCardContent-root css-46bh2p-MuiCardContent-root"
                data-analyticsid="standard-card-field-of-research-content"
                data-testid="standard-card-field-of-research-content"
                id="standard-card-field-of-research-content"
              >
                <p
                  class="MuiTypography-root MuiTypography-body1 css-u1nwny-MuiTypography-root"
                >
                  Select up to 3 Field of Research (FoR) codes at the 4 digit level
                </p>
                <field
                  is="mock"
                  name="fieldOfResearch"
                  required="true"
                />
              </div>
            </div>
          </div>
          <div
            class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 css-16fnxy3-MuiGrid2-root"
          >
            <div
              class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-985319-MuiPaper-root-MuiCard-root"
              data-testid="standard-card-keywords"
              id="standard-card-keywords"
            >
              <div
                class="MuiCardHeader-root css-16c6n48-MuiCardHeader-root"
              >
                <div
                  class="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
                >
                  <h3
                    class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title css-1hzv55z-MuiTypography-root"
                    data-testid="standard-card-keywords-header"
                    id="standard-card-keywords-header"
                  >
                    Keywords
                  </h3>
                </div>
              </div>
              <div
                class="MuiCardContent-root css-46bh2p-MuiCardContent-root"
                data-analyticsid="standard-card-keywords-content"
                data-testid="standard-card-keywords-content"
                id="standard-card-keywords-content"
              >
                <p
                  class="MuiTypography-root MuiTypography-body1 css-u1nwny-MuiTypography-root"
                >
                  Add up to 10 individual keywords, or a pipe separated list, that describe the content of the thesis. (eg. one|two|three)
                </p>
                <field
                  is="mock"
                  name="fez_record_search_key_keywords"
                  required="true"
                />
              </div>
            </div>
          </div>
          <div
            class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 css-16fnxy3-MuiGrid2-root"
          >
            <div
              class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-985319-MuiPaper-root-MuiCard-root"
              data-testid="standard-card-upload-files"
              id="standard-card-upload-files"
            >
              <div
                class="MuiCardHeader-root css-16c6n48-MuiCardHeader-root"
              >
                <div
                  class="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
                >
                  <h3
                    class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title css-1hzv55z-MuiTypography-root"
                    data-testid="standard-card-upload-files-header"
                    id="standard-card-upload-files-header"
                  >
                    Upload files
                  </h3>
                </div>
              </div>
              <div
                class="MuiCardContent-root css-46bh2p-MuiCardContent-root"
                data-analyticsid="standard-card-upload-files-content"
                data-testid="standard-card-upload-files-content"
                id="standard-card-upload-files-content"
              >
                <field
                  is="mock"
                  name="files"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-2 css-x3vexg-MuiGrid2-root"
        >
          <div
            class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-sm-true css-25dekx-MuiGrid2-root"
          />
          <div
            class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-sm-auto css-1o48fio-MuiGrid2-root"
          >
            <button
              aria-label="Cancel"
              class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-fullWidth MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-fullWidth css-1duotrm-MuiButtonBase-root-MuiButton-root"
              data-testid="cancel-deposit-thesis"
              tabindex="0"
              type="button"
            >
              Cancel
            </button>
          </div>
          <div
            class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-sm-auto css-1o48fio-MuiGrid2-root"
          >
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-fullWidth MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-fullWidth css-1duotrm-MuiButtonBase-root-MuiButton-root"
              data-testid="deposit-thesis"
              id="submit-thesis"
              tabindex="0"
              type="button"
            >
              Deposit your thesis
            </button>
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`ThesisSubmission should show file upload retry failure alert 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container StandardPage css-11lq3yg-MuiGrid-root"
    data-testid="rhd-submission-succeeded"
    id="rhd-submission-succeeded"
  >
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true css-1vd824g-MuiGrid-root"
    >
      <h2
        class="MuiTypography-root MuiTypography-body1 css-v2c8i0-MuiTypography-root"
        data-analyticsid="page-title"
        data-testid="page-title"
        id="page-title"
      >
        Professional doctorate deposit
      </h2>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
    />
    <div
      class="MuiGrid-root MuiGrid-item css-1guqyqn-MuiGrid-root"
    >
      <div
        class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-3 css-dkd71f-MuiGrid2-root"
      >
        <div
          class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 css-16fnxy3-MuiGrid2-root"
        >
          <div
            class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-985319-MuiPaper-root-MuiCard-root"
            data-testid="standard-card-your-thesis-has-been-deposited"
            id="standard-card-your-thesis-has-been-deposited"
          >
            <div
              class="MuiCardHeader-root css-16c6n48-MuiCardHeader-root"
            >
              <div
                class="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
              >
                <h3
                  class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title css-1hzv55z-MuiTypography-root"
                  data-testid="standard-card-your-thesis-has-been-deposited-header"
                  id="standard-card-your-thesis-has-been-deposited-header"
                >
                  Your thesis has been deposited
                </h3>
              </div>
            </div>
            <div
              class="MuiCardContent-root css-46bh2p-MuiCardContent-root"
              data-analyticsid="standard-card-your-thesis-has-been-deposited-content"
              data-testid="standard-card-your-thesis-has-been-deposited-content"
              id="standard-card-your-thesis-has-been-deposited-content"
            >
              <div
                class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-3 css-dkd71f-MuiGrid2-root"
              >
                <div
                  class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 css-16fnxy3-MuiGrid2-root"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-u1nwny-MuiTypography-root"
                  >
                    You will receive an email confirming your thesis deposit shortly.
                  </p>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-3 css-dkd71f-MuiGrid2-root"
      >
        <div
          class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 css-16fnxy3-MuiGrid2-root"
        >
          <div
            data-testid="alert"
            style="margin-top: 5px;"
          >
            <div
              class="MuiGrid-root MuiGrid-container css-vxa7lt-MuiGrid-root"
            >
              <div
                class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-true css-cyocdy-MuiGrid-root"
              >
                <div
                  class="MuiGrid-root MuiGrid-container css-1k6h6af-MuiGrid-root"
                >
                  <div
                    class="MuiGrid-root MuiGrid-item alert-icon css-sco6ic-MuiGrid-root"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium icon css-i4bv87-MuiSvgIcon-root"
                      data-testid="ErrorIcon"
                      focusable="false"
                      id="error-icon"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-2h2v2zm0-4h-2V7h2v6z"
                      />
                    </svg>
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true alert-text css-1ux0ax1-MuiGrid-root"
                  >
                    <b>
                      FILE UPLOAD ERROR - 
                    </b>
                    Not all files were uploaded. Please contact 
                    <a
                      href="mailto:thesis@gradschool.uq.edu.au?subject=Problem%20with%20Submission%20to%20UQ%20eSpace%20-%20First%20Last%2C%201234567"
                    >
                      the Graduate School
                    </a>
                     for assistance.
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-2 css-x3vexg-MuiGrid2-root"
      >
        <div
          class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-true css-1gtgtdn-MuiGrid2-root"
        />
        <div
          class="MuiGrid2-root MuiGrid2-direction-xs-row css-27y2fm-MuiGrid2-root"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedInherit MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorInherit MuiButton-fullWidth MuiButton-root MuiButton-contained MuiButton-containedInherit MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorInherit MuiButton-fullWidth css-16alwzc-MuiButtonBase-root-MuiButton-root"
            tabindex="0"
            type="button"
          >
            Return to the Graduate School website
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ThesisSubmission should show the file upload failure alert 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container StandardPage css-11lq3yg-MuiGrid-root"
    data-testid="rhd-submission-succeeded"
    id="rhd-submission-succeeded"
  >
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true css-1vd824g-MuiGrid-root"
    >
      <h2
        class="MuiTypography-root MuiTypography-body1 css-v2c8i0-MuiTypography-root"
        data-analyticsid="page-title"
        data-testid="page-title"
        id="page-title"
      >
        Professional doctorate deposit
      </h2>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
    />
    <div
      class="MuiGrid-root MuiGrid-item css-1guqyqn-MuiGrid-root"
    >
      <div
        class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-3 css-dkd71f-MuiGrid2-root"
      >
        <div
          class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 css-16fnxy3-MuiGrid2-root"
        >
          <div
            class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-985319-MuiPaper-root-MuiCard-root"
            data-testid="standard-card-your-thesis-has-been-deposited"
            id="standard-card-your-thesis-has-been-deposited"
          >
            <div
              class="MuiCardHeader-root css-16c6n48-MuiCardHeader-root"
            >
              <div
                class="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
              >
                <h3
                  class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title css-1hzv55z-MuiTypography-root"
                  data-testid="standard-card-your-thesis-has-been-deposited-header"
                  id="standard-card-your-thesis-has-been-deposited-header"
                >
                  Your thesis has been deposited
                </h3>
              </div>
            </div>
            <div
              class="MuiCardContent-root css-46bh2p-MuiCardContent-root"
              data-analyticsid="standard-card-your-thesis-has-been-deposited-content"
              data-testid="standard-card-your-thesis-has-been-deposited-content"
              id="standard-card-your-thesis-has-been-deposited-content"
            >
              <div
                class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-3 css-dkd71f-MuiGrid2-root"
              >
                <div
                  class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 css-16fnxy3-MuiGrid2-root"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-u1nwny-MuiTypography-root"
                  >
                    You will receive an email confirming your thesis deposit shortly.
                  </p>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-3 css-dkd71f-MuiGrid2-root"
      >
        <div
          class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 css-16fnxy3-MuiGrid2-root"
        >
          <div
            data-testid="alert"
            style="margin-top: 5px;"
          >
            <div
              class="MuiGrid-root MuiGrid-container css-vxa7lt-MuiGrid-root"
            >
              <div
                class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-true css-cyocdy-MuiGrid-root"
              >
                <div
                  class="MuiGrid-root MuiGrid-container css-1k6h6af-MuiGrid-root"
                >
                  <div
                    class="MuiGrid-root MuiGrid-item alert-icon css-sco6ic-MuiGrid-root"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium icon css-i4bv87-MuiSvgIcon-root"
                      data-testid="ErrorIcon"
                      focusable="false"
                      id="error-icon"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-2h2v2zm0-4h-2V7h2v6z"
                      />
                    </svg>
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true alert-text css-1ux0ax1-MuiGrid-root"
                  >
                    <b>
                      FILE UPLOAD ERROR - 
                    </b>
                    There was an issue uploading your thesis files. You can try uploading again by clicking the 'Retry upload' button, but if you continue to have trouble uploading, please contact 
                    <a
                      href="mailto:thesis@gradschool.uq.edu.au?subject=Problem%20with%20Submission%20to%20UQ%20eSpace%20-%20First%20Last%2C%201234567"
                    >
                      the Graduate School
                    </a>
                    .
                  </div>
                </div>
              </div>
              <div
                class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true MuiGrid-grid-sm-auto css-1vayr8-MuiGrid-root"
              >
                <button
                  class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-fullWidth MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-fullWidth action alert-button css-hf3h6t-MuiButtonBase-root-MuiButton-root"
                  data-analyticsid="action-button"
                  data-testid="action-button"
                  id="action-button"
                  tabindex="0"
                  type="button"
                >
                  Retry upload
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-2 css-x3vexg-MuiGrid2-root"
      >
        <div
          class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-true css-1gtgtdn-MuiGrid2-root"
        />
        <div
          class="MuiGrid2-root MuiGrid2-direction-xs-row css-27y2fm-MuiGrid2-root"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedInherit MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorInherit MuiButton-fullWidth MuiButton-root MuiButton-contained MuiButton-containedInherit MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorInherit MuiButton-fullWidth css-16alwzc-MuiButtonBase-root-MuiButton-root"
            tabindex="0"
            type="button"
          >
            Return to the Graduate School website
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
